# object-detector-point-cloud

./: README.md
object_recognition/: README.txt
object_recognition/src/neural_pkg/: CMakeLists.txt  package.xml
object_recognition/src/neural_pkg/include/mlp_pkg/: global.h  logsFile.h  pointCloudMethods.h  rosHandler.h  viewMethods.h
object_recognition/src/neural_pkg/msg/: Descriptor.msg~  XYZObjects.msg
object_recognition/src/neural_pkg/src/: clientService.cpp  controller.cpp  get_gestures.cpp  get_pc2.cpp  logsFile.cpp  pointCloudMethods.cpp  project_cloud.cpp  rosHandler.cpp  segment_cluster.cpp  viewMethods.cpp
object_recognition/src/neural_pkg/srv/: EmptyService.srv
